# numba-mpi

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  README.md  common.html  index.html  julia.py  julia_mpi4py.py  mpi.html  numba_mpi.html  pi.py  pyproject.toml  requirements.txt  search.js  setup.py  utils.html
.github/: dependabot.yml
.github/scripts/: run-tests.sh
.github/workflows/: bowie-tests.yml  main.yml  pdoc.yml  pylint.yml  readme.yml  readme_snippets.yml  self_hosted.yaml  stale.yml  tests+artifacts+pypi.yml  tests+pypi.yml  tests-bowie.yml  tests.yml  urlcheck.yml
api/: allreduce.html  barrier.html  bcast.html  index.html  initialized.html  irecv.html  isend.html  operator.html  rank.html  recv.html  requests.html  scatter_gather.html  send.html  size.html  wtime.html
numba_mpi/: __init__.py  api.html  common.html  common.py  mpi.py  utils.html  utils.py
numba_mpi/api/: __init__.py  allreduce.html  allreduce.py  barrier.html  barrier.py  bcast.html  bcast.py  comm_split.py  initialized.html  initialized.py  irecv.html  irecv.py  isend.html  isend.py  operator.html  operator.py  query_thread.html  query_thread.py  rank.html  rank.py  recv.html  recv.py  reduce.html  reduce.py  requests.html  requests.py  scatter_gather.html  scatter_gather.py  send.html  send.py  sendrecv.html  sendrecv.py  size.html  size.py  wtime.html  wtime.py
numba_mpi_tests/: test_mpi.py
pdoc_templates/: index.html.jinja2
tests/: common.py  conftest.py  test_mpi.py  test_paper_listings.py  test_version.py  utils.py
(+22 files in other folders)
